# project2

./: README.md  pyproject.toml
.github/workflows/: search_a.yml
data/: dummy.adjlist
search/: graph.py
test/: test_bfs.py
