[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "search"
authors = [{name = "Silvia Miramontes", email = "silvia.miramontes@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["networkx", "pytest"]

[project.urls]
Home = "https://github.com/s-miramontes/project2"
